lib/src/peg/generated-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(nodes, appearance) {
          return { nodes, appearance };
        },
      peg$c1 = function(node) { return node; },
      peg$c2 = function(branch) { return branch; },
      peg$c3 = function(keywordLocation, id, label, body) {
          return { location: keywordLocation, type: 'normal', id, label, body };
        },
      peg$c4 = "node",
      peg$c5 = peg$literalExpectation("node", false),
      peg$c6 = function() { return location(); },
      peg$c7 = ":",
      peg$c8 = peg$literalExpectation(":", false),
      peg$c9 = function(id) { return id; },
      peg$c10 = function(keywordLocation, id, label, body, cases) {
          return { location: keywordLocation, type: 'branch', id, label, body, cases };
        },
      peg$c11 = "branch",
      peg$c12 = peg$literalExpectation("branch", false),
      peg$c13 = "{",
      peg$c14 = peg$literalExpectation("{", false),
      peg$c15 = "}",
      peg$c16 = peg$literalExpectation("}", false),
      peg$c17 = function(cases) { return cases; },
      peg$c18 = function(keywordLocation, label, nodes) {
          return { location: keywordLocation, label, nodes };
        },
      peg$c19 = "when",
      peg$c20 = peg$literalExpectation("when", false),
      peg$c21 = function(keywordLocation, appearances) {
          return { location: keywordLocation, appearances };
        },
      peg$c22 = "appearance",
      peg$c23 = peg$literalExpectation("appearance", false),
      peg$c24 = function(selectors, modifiers) {
          return { selectors, modifiers };
        },
      peg$c25 = "@",
      peg$c26 = peg$literalExpectation("@", false),
      peg$c27 = ",",
      peg$c28 = peg$literalExpectation(",", false),
      peg$c29 = function(id) {
          return { type: 'id', ...id };
        },
      peg$c30 = function(keywordLocation) {
          return { type: 'element', value: 'node', location: keywordLocation };
        },
      peg$c31 = function(keywordLocation) {
          return { type: 'element', value: 'branch', location: keywordLocation };
        },
      peg$c32 = function(shape) { return { shape }; },
      peg$c33 = function(style) { return { style }; },
      peg$c34 = ";",
      peg$c35 = peg$literalExpectation(";", false),
      peg$c36 = function(keywordLocation, type) {
          return { location: keywordLocation, type };
        },
      peg$c37 = "shape",
      peg$c38 = peg$literalExpectation("shape", false),
      peg$c39 = "rectangle",
      peg$c40 = peg$literalExpectation("rectangle", false),
      peg$c41 = "ellipse",
      peg$c42 = peg$literalExpectation("ellipse", false),
      peg$c43 = function(keywordLocation, id, options) {
            return { location: keywordLocation, id, options };
          },
      peg$c44 = "style",
      peg$c45 = peg$literalExpectation("style", false),
      peg$c46 = "1",
      peg$c47 = peg$literalExpectation("1", false),
      peg$c48 = "2",
      peg$c49 = peg$literalExpectation("2", false),
      peg$c50 = "3",
      peg$c51 = peg$literalExpectation("3", false),
      peg$c52 = function(parameters) { return parameters; },
      peg$c53 = function(option) { return option; },
      peg$c54 = "+",
      peg$c55 = peg$literalExpectation("+", false),
      peg$c56 = function(option) { return { type: 'enable', option }; },
      peg$c57 = "-",
      peg$c58 = peg$literalExpectation("-", false),
      peg$c59 = function(option) { return { type: 'disable', option }; },
      peg$c60 = "fill",
      peg$c61 = peg$literalExpectation("fill", false),
      peg$c62 = "border",
      peg$c63 = peg$literalExpectation("border", false),
      peg$c64 = "shadow",
      peg$c65 = peg$literalExpectation("shadow", false),
      peg$c66 = "rounded",
      peg$c67 = peg$literalExpectation("rounded", false),
      peg$c68 = /^[A-z_]/,
      peg$c69 = peg$classExpectation([["A", "z"], "_"], false, false),
      peg$c70 = /^[A-z_0-9]/,
      peg$c71 = peg$classExpectation([["A", "z"], "_", ["0", "9"]], false, false),
      peg$c72 = function(start, rest) {
          return { location: location(), value: start + rest.join('') };
        },
      peg$c73 = "\"",
      peg$c74 = peg$literalExpectation("\"", false),
      peg$c75 = function(characters) { return characters.join(''); },
      peg$c76 = "\\",
      peg$c77 = peg$literalExpectation("\\", false),
      peg$c78 = "\n",
      peg$c79 = peg$literalExpectation("\n", false),
      peg$c80 = "\r",
      peg$c81 = peg$literalExpectation("\r", false),
      peg$c82 = peg$anyExpectation(),
      peg$c83 = function(character) { return character; },
      peg$c84 = function(sequence) { return sequence; },
      peg$c85 = "[",
      peg$c86 = peg$literalExpectation("[", false),
      peg$c87 = "]",
      peg$c88 = peg$literalExpectation("]", false),
      peg$c89 = "b",
      peg$c90 = peg$literalExpectation("b", false),
      peg$c91 = function() { return '\b';   },
      peg$c92 = "f",
      peg$c93 = peg$literalExpectation("f", false),
      peg$c94 = function() { return '\f';   },
      peg$c95 = "n",
      peg$c96 = peg$literalExpectation("n", false),
      peg$c97 = function() { return '\n';   },
      peg$c98 = "r",
      peg$c99 = peg$literalExpectation("r", false),
      peg$c100 = function() { return '\r';   },
      peg$c101 = "t",
      peg$c102 = peg$literalExpectation("t", false),
      peg$c103 = function() { return '\t';   },
      peg$c104 = "v",
      peg$c105 = peg$literalExpectation("v", false),
      peg$c106 = function() { return '\x0B'; },
      peg$c107 = "#",
      peg$c108 = peg$literalExpectation("#", false),
      peg$c109 = " ",
      peg$c110 = peg$literalExpectation(" ", false),
      peg$c111 = "\t",
      peg$c112 = peg$literalExpectation("\t", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseNode();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseNode();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseAppearance();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNode() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseNormalNode();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpaceOrComment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpaceOrComment();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseBranchNode();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSpaceOrComment();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSpaceOrComment();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseNormalNode() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseNodeKeyword();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNodeId();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseString();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseSpace();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseSpace();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseMultilineString();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s1, s2, s4, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNodeKeyword() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNodeId() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 58) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdentifier();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBranchNode() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseBranchKeyword();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNodeId();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseString();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseSpace();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseSpace();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseMultilineString();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseSpace();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseSpace();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseBranchCases();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c10(s1, s2, s4, s6, s8);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBranchKeyword() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c11) {
      s1 = peg$c11;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseBranchCases() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c13;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpaceOrComment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpaceOrComment();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseBranchCase();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseBranchCase();
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 125) {
            s4 = peg$c15;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c17(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBranchCase() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parseBranchCaseKeyword();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpace();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseString();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseSpace();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseSpace();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c13;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c14); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseSpaceOrComment();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseSpaceOrComment();
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseNode();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseNode();
                }
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s8 = peg$c15;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c16); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = [];
                    s10 = peg$parseSpaceOrComment();
                    while (s10 !== peg$FAILED) {
                      s9.push(s10);
                      s10 = peg$parseSpaceOrComment();
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c18(s1, s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBranchCaseKeyword() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c19) {
      s1 = peg$c19;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseAppearance() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseAppearanceKeyword();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpace();
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s3 = peg$c13;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseSpaceOrComment();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseSpaceOrComment();
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseNodeAppearance();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseNodeAppearance();
            }
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 125) {
                s6 = peg$c15;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c16); }
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseSpaceOrComment();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseSpaceOrComment();
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c21(s1, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAppearanceKeyword() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 10) === peg$c22) {
      s1 = peg$c22;
      peg$currPos += 10;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c23); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNodeAppearance() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
